--- a/BankApp/BankApp/BankApp.csproj
+++ b/BankApp/BankApp/BankApp.csproj
@@ -190,6 +190,10 @@
   <ItemGroup>
     <Resource Include="bin\Debug\AppConfig.XML" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="migrations\createdb1.sql" />
+    <Content Include="migrations\createtable1.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
